deployment_os.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gen-ai-rag-sample-app
  labels:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gen-ai-rag-sample-app
  labels:
    application: gen-ai-rag-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gen-ai-rag-sample-app
  template:
    metadata:
      labels:
        app: gen-ai-rag-sample-app
    spec:
      serviceAccountName: gen-ai-rag-sample-app-sa
      containers:
        - name: gen-ai-rag-sample-app
          image: gen-ai-rag-sample-app
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          imagePullPolicy: Always   
          ports:
            - containerPort: 8080
              protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: gen-ai-rag-sample-app
  namespace: gen-ai-rag-sample-app
  labels:
    app: gen-ai-rag-sample-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: gen-ai-rag-sample-app
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gen-ai-rag-sample-app
  namespace: gen-ai-rag-sample-app
  labels:
    app: gen-ai-rag-sample-app
spec:
  to:
    kind: Service
    name: gen-ai-rag-sample-app
  port:
    targetPort: http
  tls:
    termination: edge
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gen-ai-rag-sample-app-tls
  namespace: gen-ai-rag-sample-app
  labels:
    app: gen-ai-rag-sample-app
    ingress: ingress-public
spec:
  host: gen-ai-rag-sample-app-tls-dev.subdomain
  to:
    kind: Service
    name: gen-ai-rag-sample-app
  port:
    targetPort: http
  tls:
    termination: edge
